--- a/FeedMe/Info.plist
+++ b/FeedMe/Info.plist
@@ -24,6 +24,15 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Fotograf seçimi için arşivinize erişilmek isteniyor ?</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Yer Eklemek için lokasyonunuza erişilmek isteniyor ?</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
